--- a/two-hand.cabal
+++ b/two-hand.cabal
@@ -22,6 +22,7 @@ common common
     -Wno-safe
     -Wno-missing-safe-haskell-mode
     -Wno-missing-deriving-strategies
+    -Wno-prepositive-qualified-module
 
 library
   import: common
